Fixes issue with uneven input lengths

--- a/mysite/babynames/static/babynames/styles.css
+++ b/mysite/babynames/static/babynames/styles.css
@@ -34,6 +34,7 @@ select, input[type="text"] {
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 
 button {
